kubernetes/Amer/cluster-deployment/Deployments/gitea/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea
  namespace: gitea
  labels:
    app: gitea
spec:
  type: NodePort
  ports:
  - name: http
    port: 3000
    targetPort: 3000
    nodePort: 30090
    protocol: TCP
  - name: ssh
    port: 22
    targetPort: 22
    nodePort: 30022
    protocol: TCP
  selector:
    app: gitea
