kubernetes/Amer/cluster-deployment/Deployments/gitea/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: gitea-network-policy
  namespace: gitea
spec:
  podSelector:
    matchLabels:
      app: gitea
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: gitea
    ports:
    - protocol: TCP
      port: 3000
    - protocol: TCP
      port: 22
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          name: gitea
    ports:
    - protocol: TCP
      port: 3000
    - protocol: TCP
      port: 22
